@@ -18,15 +18,31 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-rootProject.name = 'spine-dart'
-
-def integrationTest(final String name) {
-    include name
-    project(":$name").projectDir = new File("$rootDir/integration-tests/$name")
+buildscript { final scriptHandler ->
+    defaultRepositories(scriptHandler)
+    dependencies {
+        classpath "io.spine.tools:spine-model-compiler:$spineBaseVersion"
+    }
 }
 
-include 'client'
-include 'codegen'
+plugins {
+    id 'java'
+    id 'org.gretty' version '2.3.1'
+    id "com.github.psxpaul.execfork" version "0.1.11"
+}
 
-integrationTest 'test-app'
-integrationTest 'client-test'
+apply plugin: 'io.spine.tools.spine-model-compiler'
+apply from: "$rootDir/config/gradle/model-compiler.gradle"
+
+dependencies {
+    implementation "io.spine.gcloud:spine-firebase-web:$spineWebVersion"
+}
+
+gretty {
+    contextPath = '/'
+    httpPort = 8080
+    debugPort = 5005
+    debugSuspend = true
+    jvmArgs = ['-Dio.spine.tests=true', '-Xverify:none']
+    servletContainer = 'jetty9'
+}
